--- a/Visualize CNN Layer Outputs and Filters.ipynb
+++ b/Visualize CNN Layer Outputs and Filters.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -642,9 +642,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras import backend as K\n",
     "from scipy.misc import imsave\n",
@@ -733,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,17 +751,30 @@
     "\n",
     "model = applications.VGG16(include_top=False, weights='imagenet')\n",
     "\n",
-    "#get_filter_visualizations(model, 256, 256, 'block5_conv2', 20)"
+    "layer_dict = dict([(layer.name, layer) for layer in model.layers])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run below code to get the visualization of filters of individual layers\n",
+    "\n",
+    "get_filter_visualizations(model, 256, 256, 'block5_conv2', 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run below code to get the visualization of a single filter in each of the layers.\n",
+    "\n",
     "for i, val in enumerate((list(layer_dict)[1:])):\n",
-    "    get_filter_visualizations(model, 256, 256, val, 20, single_filter=True, single_filter_no=50)"
+    "    get_filter_visualizations(model, 256, 256, val, 20, single_filter=True, single_filter_no=13)"
    ]
   },
   {
